RESOLVED FIXED125612
[Cocoa] Navigation action information for policy decisions is missing the original request
https://bugs.webkit.org/show_bug.cgi?id=125612
Summary [Cocoa] Navigation action information for policy decisions is missing the ori...
mitz
Reported 2013-12-11 18:33:13 PST
[Cocoa] Navigation action information for policy decisions is missing the original request
Attachments
Expose the original request in the action dictionary (25.14 KB, patch)
2013-12-11 18:38 PST, mitz
andersca: review+
mitz
Comment 1 2013-12-11 18:38:33 PST
Created attachment 219029 [details] Expose the original request in the action dictionary
WebKit Commit Bot
Comment 2 2013-12-11 18:40:18 PST
Attachment 219029 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/Platform/CoreIPC/HandleMessage.h', u'Source/WebKit2/UIProcess/API/C/WKPagePolicyClientInternal.h', u'Source/WebKit2/UIProcess/API/Cocoa/WKBrowsingContextController.mm', u'Source/WebKit2/UIProcess/API/Cocoa/WKBrowsingContextPolicyDelegate.h', u'Source/WebKit2/UIProcess/WebPageProxy.cpp', u'Source/WebKit2/UIProcess/WebPageProxy.h', u'Source/WebKit2/UIProcess/WebPageProxy.messages.in', u'Source/WebKit2/UIProcess/WebPolicyClient.cpp', u'Source/WebKit2/UIProcess/WebPolicyClient.h', u'Source/WebKit2/WebKit2.xcodeproj/project.pbxproj', u'Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp', '--commit-queue']" exit_code: 1 ERROR: Source/WebKit2/UIProcess/WebPageProxy.h:901: The parameter name "request" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKBrowsingContextPolicyDelegate.h:36: One space before end of line comments [whitespace/comments] [5] Total errors found: 2 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3 2013-12-11 18:41:18 PST
Not sure if this internal interface is a good idea. The idea is that we won’t have to create a new versioned interface each time we modify something for the Cocoa API. We’ll only create a new version when the C API requires it (by moving the internal version to the main header).
mitz
Comment 4 2013-12-11 21:20:16 PST
mitz
Comment 5 2013-12-12 10:42:58 PST
Note You need to log in before you can comment on or make changes to this bug.